@@ -1,11 +1,12 @@
-# Copyright (c) 2018 Patricio Cubillos and contributors.
-# puppies is open-source software under the MIT license (see LICENSE).
+# Copyright (c) 2021 Patricio Cubillos
+# puppies is open-source software under the MIT license (see LICENSE)
+
 
 from .imedit import *
-from .disk   import *
+from .disk import *
 
 from .imedit import __all__ as iall
-from .disk   import __all__ as dall
+from .disk import __all__ as dall
 __all__ = iall + dall
 
 
@@ -13,7 +14,7 @@ __all__ = iall + dall
 # or is a magic attribute, and that isn't a submodule of this package
 for varname in dir():
     if not ((varname.startswith('__') and varname.endswith('__')) or
-            varname in __all__ ):
+            varname in __all__):
         del locals()[varname]
 del(varname)
 
